Reporte de Operaciones

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8" />
     <meta property="twitter:card" content="summary_large_image" />
     <link href="css/index.css" rel="stylesheet" />
-    <link rel="icon" href= "img/skanhawk.png" />
+    <link rel="icon" href= "img/SkanHawk  black .png" />
     <script src ="https://d3js.org/d3.v4.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.9/angular.min.js"></script><!--etiqueta angular-->
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script> <!--libreria de Chart.JS-->
@@ -47,6 +47,7 @@
     <!-- Gráficas ESTADO OPERACIONAL -->
     <div class="contenedor">
         <h2>ACTIVIDADES REPORTADAS POR DÍA</h2>
+        <!--Grafica de pastel No1-->
         <canvas class="grafica1" id="workoverChart"></canvas>
     </div>
     <br>
@@ -59,6 +60,7 @@
             <li>🟪 Esperas</li>
             <li>🟨 Standby</li>
         </ul>
+        <!--Grafica de barras No1-->
         <canvas class="grafica2" id="grafica2"></canvas>
     </div>
 
@@ -277,6 +279,7 @@
     </script>
     </div>
 </div>
+
     <div class="contenedor4">
         <h2>Velocidad de carga</h2>
         <canvas class="grafica4" id="grafica4"></canvas>
